--- a/estilo/index.css
+++ b/estilo/index.css
@@ -81,7 +81,7 @@ padding-bottom: 10vh;
 
 }
 section#img1{
-    background-image: url(/imagens/background001.jpg);
+    background-image: url(../imagens/wp7413792.jpg);
     background-position: right center;
 }
 
@@ -101,7 +101,7 @@ section.s2 > p{
 }
 
 section#img2{
-    background-image: url(/imagens/background002.jpg);
+    background-image: url(../imagens/odell-tom-5374b37936efd.jpg);
     background-position: left center;
 }
 
